--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-# Dependency directories
+# Node modules
 node_modules/
-# macOS files
-.DS_Store
-# Compiled output
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
 dist/
 build/
-# Log files
-*.log
-npm-debug.log*
-# Temporary files
-*.tmp
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# System files
+.DS_Store
+Thumbs.db
